# DreamVsDream

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  pngcrush.sh  todos  todos.sh  tounix  tounix.sh
COMPILE/: atlas  compile-all.sh  compile.sh  compiler  sprtool
COMPILE/chars/maddysucky/: character.ubu  commands.ubu  general.json  sounds.json  sounds.ubu  sprites.json  states.ubu  tmp-sprites.json  voices.json
COMPILE/chars/madotsuki/: character.ubu  commands.ubu  general.json  sounds.json  sounds.ubu  sprites.json  sprites.ubu  sprites.ubu.bak  states.ubu  tmp-sprites.json  voices.json  voices.ubu
COMPILE/chars/masutaa/: character.ubu  sprites.ubu  states.ubu
COMPILE/chars/me/: sprites.ubu
COMPILE/chars/sabitsuki/: character.ubu  commands.ubu  general.json  sounds.json  sounds.ubu  sprites.json  sprites.ubu  states.ubu  tmp-sprites.json  voices.json  voices.ubu
COMPILE/chars/urotsuki/: sprites.ubu
DvD/: Makefile  config.mk
DvD/_config/: emscripten.mk  linux.mk  osx.mk  win.mk
DvD/config/: emscripten.mk  linux.mk  osx.mk  win.mk
DvD/data/menus/: select.ubu  versus.ubu
DvD/res/chars/: madotsuki.char  sabitsuki.char  secret.char
DvD/res/effects/: fix_files.sh  stripalpha.sh
DvD/res/effects_old/: effects.ubu
DvD/res/menus/: credits.ubu  fight.ubu  intro.ubu  netplay.ubu  select.ubu  title.ubu
DvD/res/shaders/: palette.f.glsl
DvD/src/: animation.cpp  atlas.cpp  atlas.h  effect.cpp  effect.h  error.cpp  error.h  fighter.cpp  fighter.h  file.cpp  file.h  font.cpp  font.h  globals.h  graphics.cpp  graphics.h  image.cpp  image.h  init.cpp  input.cpp  input.h  main.cpp  menu.cpp  menu.h  network.cpp  network.h  os-linux.h  os.cpp  os.h  parser.cpp  parser.h  player.cpp  player.h  shader.cpp  shader.h  sound.cpp  sound.h  sprite.cpp  sprite.h  stage.cpp  (+7 more)
DvD/src/old/: os-linux.cpp  os-linux.h  os-windows.cpp  os-windows.h  video.cpp
OSX/: bundle-lib.sh  bundle.sh  clean.sh
OSX/Dream vs. Dream.app/Contents/: Info.plist
RELEASE/linux/: bundle.sh
RELEASE/osx/: bundle.sh  clean.sh
RELEASE/w32/: DvD.iss  bundle.sh
RELEASE/w32/x64/: data
RELEASE/w32/x86/: data
_COMPILE/: atlas  compiler  sprtool
_COMPILE/chars/: madotsuki.atlas.list  sabitsuki.atlas.list
_COMPILE/chars/madotsuki/: character.ubu
_COMPILE/chars/masutaa/: sprites.ubu
_COMPILE/chars/me/: voices.ubu
_COMPILE/chars/sabitsuki/: character.ubu  commands.ubu  sounds.ubu  sprites.ubu  sprites.ubu.bak  states.ubu
_COMPILE/chars/secret/: character.def  commands.foo  sprites.foo  states.foo  voices.foo
atlas/: config.mk
atlas/src/: image.cpp  image.h  main.cpp
cache/chars/: maddysucky.char
compiler/: config.mk
compiler/src/: main.cpp
data/chars/: chars.json
data/effects/: effects.json
data/menus/fight/: timer.rf
data/menus/title/: flow.ubu
data/scenes/: options.ubu  versus.ubu
data/scenes/controls/: controls.json
data/scenes/credits/: credits.json  credits.txt
data/scenes/fight/: combo.rf  fight.json
data/shaders/: palette330.frag.glsl  primitive.frag.glsl  primitive.vert.glsl  texture2D.frag.glsl  texture2D.vert.glsl  vertex.v.glsl
data/stages/: stages.json
docs/: CREDITS.md  EXTERNAL_LIBRARIES.md  README.md  v0.2_DOC_Mont314.txt
docs/contributors/: CONTRIBUTING.md
docs/distribution/: README_DvD.txt
docs/users/: BUILD.md  ERRORS.md
fontbuild/: Makefile
fontbuild-res/: font.txt  timer.txt
fontbuild/res/: combo.txt  nes.txt  timer.txt
fontbuild/src/: main.c
schemas/: chars.json  references.json  stage.json  stages.json
schemas/chars/: general.json  sounds.json  sprites.json  voices.json
schemas/manifest/: effects.json
schemas/scenes/: controls.json  credits.json  fight.json  intro.json  netplay.json  options.json  scenes.json  select.json  title.json
sprtool/: Makefile  config.mk
sprtool/config/: linux.mk  osx.mk  win.mk
sprtool/src/: init.cpp  input.cpp  main.cpp
src/: CMakeLists.txt
src/Atlas/: image.cpp  image.h  main.cpp
src/CharTool/: app.cpp  app.h  frame.cpp  frame.h  main.cpp
src/CharTool/page/: general.cpp  general.h  page_base.h  sounds.cpp  sounds.h  sprites.cpp  sprites.h  voices.cpp  voices.h
src/Compiler/: main.cpp
src/DvD/: animation.cpp  animation.h  animation_giflib.cpp  app.cpp  app.h  atlas.cpp  atlas.h  effect.cpp  effect.h  error.cpp  error.h  fighter.cpp  fighter.h  file.cpp  file.h  font.cpp  font.h  globals.h  graphics.cpp  graphics.h  image.cpp  image.h  init.cpp  input.cpp  input.h  main.cpp  menu.cpp  menu.h  network.cpp  network.h  os.cpp  os.h  parser.cpp  parser.h  player.cpp  player.h  resource_manager.cpp  resource_manager.h  scene.cpp  scene.h  (+14 more)
src/DvD/menu/: button.cpp  button.h  menu_interface.cpp  menu_interface.h  selector.cpp  selector.h  submenu.cpp  submenu.h
src/DvD/scene/: controls.cpp  controls.h  credits.cpp  credits.h  fight.cpp  fight.h  intro.cpp  intro.h  netplay.cpp  netplay.h  options.cpp  options.h  scene.cpp  scene.h  scene_base.cpp  scene_base.h  select.cpp  select.h  title.cpp  title.h  versus.cpp  versus.h
src/DvD/shader_renderer/: fighter_renderer.cpp  fighter_renderer.h  primitive_renderer.cpp  primitive_renderer.h  texture2D_renderer.cpp  texture2D_renderer.h
src/Fontbuild/: main.c
src/Sprtool/: init.cpp  input.cpp  main.cpp
src/UBU2JSON/: chars.cpp  chars.h  main.cpp  scenes.cpp  scenes.h  stages.cpp  stages.h  ubu.cpp  ubu.h
src/fileIO/: json.cpp  json.h  text.cpp  text.h
src/parser/: JSON_parser.h
src/parser/chars/: general.cpp  general.h  sounds.cpp  sounds.h  sprites.cpp  sprites.h  voices.cpp  voices.h
src/renderer/: gl_loader.h  index_buffer.cpp  index_buffer.h  renderer.cpp  renderer.h  renderer_base_api.h  shader.cpp  shader.h  texture2D.cpp  texture2D.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/util/: fileIO.cpp  fileIO.h  rng.cpp  rng.h  vec2.cpp  vec2.h
unused/: pngcrush.sh  tounix.sh
unused/DvD/: Makefile  config.mk
unused/atlas/: Makefile
unused/compiler/: Makefile
unused/fontbuild/: config.mk
unused/sprtool/: Makefile  config.mk  keybindings.txt
(+189 files in other folders)
